2009-03-09  Akira TAGOH  <tagoh@redhat.com>

	* README: Add a description of IMSETTINGS_INTEGRATE_DESKTOP env.

	* utils/imsettings-start.c (main): Add --cond-start option.

	* utils/imsettings-start.desktop.in: New.

	* data/xinput.sh.in.in: Support execution-delay to integrate more
	to desktop.

2009-03-04  Akira TAGOH  <tagoh@redhat.com>

	* backends/xfce_xfconf/imsettings-xfce-helper.desktop.in:
	Remove Hidden tag.

2009-02-23  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.106.0

	* NEWS: update

	Fix a warning during parsing Compose data. (RHBZ#484142)
	
	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): send
	a key event with XLookupKeySym when no strings available.

	* backends/xim/compose.c (compose_parse): Fix not working in the case
	when the keysym or the string only is available at the right value.

2009-02-18  Akira TAGOH  <tagoh@redhat.com>

	Add Xfconf support. (RHBZ#478669)

	* backends/xfce_xfconf/imsettings-xfce-helper.desktop.in:
	* backends/xfce_xfconf/main.c:
	* backends/xfce\xfconf/Makefile.am: New.

2009-02-16  Akira TAGOH  <tagoh@redhat.com>

	* tests/rhbz_471833.c: add new testcase.

	* src/monitor.c (_imsettings_monitor_lookup): set an error if no
	return value.
	(imsettings_monitor_lookup): use stocked directory name instead of
	hardcoded one.

2009-02-13  Akira TAGOH  <tagoh@redhat.com>

	Allow a lowercase input method name. (RHBZ#471833)
	
	* utils/imsettings-list.c (main): display the xinput conf name
	in the list too.

	* src/monitor.c (imsettings_monitor_add_file): allow a lower-case name
	to look up the name.
	(imsettings_monitor_remove_file): likewise.
	(imsettings_monitor_get_current_user_im): likewise.
	(imsettings_monitor_get_current_system_im): likewise.
	(_imsettings_monitor_lookup): new.
	(imsettings_monitor_lookup): try to look up IM with .conf to allow
	xinput conf name.

2009-01-21  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: update to support xfconf and mcs separately.
